--- a/pages/19046.html
+++ b/pages/19046.html
@@ -639,6 +639,338 @@ margin-left: 0em;
   <a href='/nlab/edit/topos+theory+-+contents'>Edit this sidebar</a>
 </p>
 </div></div>
+
+<h4 id='topos_theory_2'><math class='maruku-mathml' display='inline' id='mathml_23f2de45b20e580d4e2116675ca78d323f1ed4d9_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Topos Theory</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos+theory'>(∞,1)-topos theory</a></strong></p>
+
+<h2 id='background_2'>Background</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/sheaf+and+topos+theory'>sheaf and topos theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category'>(∞,1)-category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-functor'>(∞,1)-functor</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-presheaf'>(∞,1)-presheaf</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category+of+%28infinity%2C1%29-presheaves'>(∞,1)-category of (∞,1)-presheaves</a></p>
+</li>
+</ul>
+
+<h2 id='definitions'>Definitions</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/elementary+%28infinity%2C1%29-topos'>elementary (∞,1)-topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-site'>(∞,1)-site</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/reflective+sub-%28infinity%2C1%29-category'>reflective sub-(∞,1)-category</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/localization+of+an+%28infinity%2C1%29-category'>localization of an (∞,1)-category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/topological+localization'>topological localization</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/hypercompletion'>hypercompletion</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category+of+%28infinity%2C1%29-sheaves'>(∞,1)-category of (∞,1)-sheaves</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-sheaf'>(∞,1)-sheaf</a>/<a class='existingWikiWord' href='/nlab/show/infinity-stack'>∞-stack</a>/<a class='existingWikiWord' href='/nlab/show/derived+stack'>derived stack</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>(∞,1)-topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%28n%2C1%29-topos'>(n,1)-topos</a>, <a class='existingWikiWord' href='/nlab/show/n-topos'>n-topos</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/truncated+object'>n-truncated object</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/connected+object'>n-connected object</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/topos'>(1,1)-topos</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/presheaf'>presheaf</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/sheaf'>sheaf</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/2-topos'>(2,1)-topos</a>, <a class='existingWikiWord' href='/nlab/show/2-topos'>2-topos</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/%282%2C1%29-presheaf'>(2,1)-presheaf</a></li>
+</ul>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-quasitopos'>(∞,1)-quasitopos</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/separated+%28infinity%2C1%29-presheaf'>separated (∞,1)-presheaf</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quasitopos'>quasitopos</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/separated+presheaf'>separated presheaf</a></li>
+</ul>
+</li>
+
+<li>
+<p><span class='newWikiWord'>(2,1)-quasitopos<a href='/nlab/new/%282%2C1%29-quasitopos'>?</a></span></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/separated+%282%2C1%29-presheaf'>separated (2,1)-presheaf</a></li>
+</ul>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%28infinity%2C2%29-topos'>(∞,2)-topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%28infinity%2Cn%29-topos'>(∞,n)-topos</a></p>
+</li>
+</ul>
+
+<h2 id='characterization'>Characterization</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/pullback-stable+colimit'>universal colimits</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%28sub%29object+classifier+in+an+%28infinity%2C1%29-topos'>object classifier</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/groupoid+object+in+an+%28infinity%2C1%29-category'>groupoid object in an (∞,1)-topos</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/effective+epimorphism'>effective epimorphism</a></li>
+</ul>
+</li>
+</ul>
+
+<h2 id='morphisms'>Morphisms</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-geometric+morphism'>(∞,1)-geometric morphism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29Topos'>(∞,1)Topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Lawvere+distribution'>Lawvere distribution</a></p>
+</li>
+</ul>
+
+<h2 id='extra_stuff_structure_and_property'>Extra stuff, structure and property</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/hypercomplete+%28infinity%2C1%29-topos'>hypercomplete (∞,1)-topos</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/hypercomplete+object'>hypercomplete object</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Whitehead+theorem'>Whitehead theorem</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/over-%28infinity%2C1%29-topos'>over-(∞,1)-topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/n-localic+%28infinity%2C1%29-topos'>n-localic (∞,1)-topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/locally+n-connected+%28n%2B1%2C1%29-topos'>locally n-connected (n,1)-topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/structured+%28infinity%2C1%29-topos'>structured (∞,1)-topos</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/geometry+%28for+structured+%28infinity%2C1%29-toposes%29'>geometry (for structured (∞,1)-toposes)</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/locally+n-connected+%28n%2B1%2C1%29-topos'>locally ∞-connected (∞,1)-topos</a>, <a class='existingWikiWord' href='/nlab/show/locally+n-connected+%28n%2B1%2C1%29-topos'>∞-connected (∞,1)-topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%28%E2%88%9E%2C1%29-local+geometric+morphism'>local (∞,1)-topos</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/concrete+%28infinity%2C1%29-sheaf'>concrete (∞,1)-sheaf</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/cohesive+%28infinity%2C1%29-topos'>cohesive (∞,1)-topos</a></p>
+</li>
+</ul>
+
+<h2 id='models'>Models</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/presentations+of+%28infinity%2C1%29-sheaf+%28infinity%2C1%29-toposes'>models for ∞-stack (∞,1)-toposes</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/model+category'>model category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/model+structure+on+functors'>model structure on functors</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/model+site'>model site</a>/<a class='existingWikiWord' href='/nlab/show/sSet-site'>sSet-site</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/model+structure+on+simplicial+presheaves'>model structure on simplicial presheaves</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/descent+for+simplicial+presheaves'>descent for simplicial presheaves</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Verity+on+descent+for+strict+omega-groupoid+valued+presheaves'>descent for presheaves with values in strict ∞-groupoids</a></p>
+</li>
+</ul>
+</li>
+</ul>
+
+<h2 id='constructions'>Constructions</h2>
+
+<p><strong>structures in a <a class='existingWikiWord' href='/nlab/show/cohesive+%28infinity%2C1%29-topos'>cohesive (∞,1)-topos</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/shape+of+an+%28infinity%2C1%29-topos'>shape</a> / <a class='existingWikiWord' href='/nlab/show/coshape+of+an+%28infinity%2C1%29-topos'>coshape</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/cohomology'>cohomology</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy+groups+in+an+%28infinity%2C1%29-topos'>homotopy</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/fundamental+infinity-groupoid+in+a+locally+infinity-connected+%28infinity%2C1%29-topos'>fundamental ∞-groupoid in a locally ∞-connected (∞,1)-topos</a>/<a class='existingWikiWord' href='/nlab/show/fundamental+infinity-groupoid+of+a+locally+infinity-connected+%28infinity%2C1%29-topos'>of a locally ∞-connected (∞,1)-topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/categorical+homotopy+groups+in+an+%28infinity%2C1%29-topos'>categorical</a>/<a class='existingWikiWord' href='/nlab/show/geometric+homotopy+groups+in+an+%28infinity%2C1%29-topos'>geometric</a> homotopy groups</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Postnikov+tower+in+an+%28infinity%2C1%29-category'>Postnikov tower</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Whitehead+tower+in+an+%28infinity%2C1%29-topos'>Whitehead tower</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/function+algebras+on+infinity-stacks'>rational homotopy</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/dimension'>dimension</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy+dimension'>homotopy dimension</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/cohomological+dimension'>cohomological dimension</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/covering+dimension'>covering dimension</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Heyting+dimension'>Heyting dimension</a></p>
+</li>
+</ul>
+</li>
+</ul>
+<div>
+<p>
+  <a href='/nlab/edit/%28infinity%2C1%29-topos+-+contents'>Edit this sidebar</a>
+</p>
+</div></div>
 </div>
 </div>
 
@@ -646,7 +978,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a></li><li><a href='#properties'>Properties</a></li><li><a href='#examples'>Examples</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>An <strong>exponentiable topos</strong> is a generalization of the notion of an exponentiable <a class='existingWikiWord' href='/nlab/show/locale'>locale</a> and can be viewed as a (topological) “space” <math class='maruku-mathml' display='inline' id='mathml_775168392cdf3ef636d0d65b4a25349418e2a122_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> that behaves well with respect to the construction of mapping spaces <math class='maruku-mathml' display='inline' id='mathml_775168392cdf3ef636d0d65b4a25349418e2a122_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>Y</mi> <mi>X</mi></msup></mrow><annotation encoding='application/x-tex'>Y^X</annotation></semantics></math>.</p>
+<p>An <strong>exponentiable topos</strong> is a generalization of the notion of an exponentiable <a class='existingWikiWord' href='/nlab/show/locale'>locale</a> and can be viewed as a (topological) “space” <math class='maruku-mathml' display='inline' id='mathml_23f2de45b20e580d4e2116675ca78d323f1ed4d9_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> that behaves well with respect to the construction of mapping spaces <math class='maruku-mathml' display='inline' id='mathml_23f2de45b20e580d4e2116675ca78d323f1ed4d9_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>Y</mi> <mi>X</mi></msup></mrow><annotation encoding='application/x-tex'>Y^X</annotation></semantics></math>.</p>
 
 <p>The concept generalizes to <a class='existingWikiWord' href='/nlab/show/higher+topos+theory'>higher topos theory</a>.</p>
 
@@ -661,15 +993,15 @@ margin-left: 0em;
 <div class='num_prop'>
 <h6 id='theorem'>Theorem</h6>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a> <math class='maruku-mathml' display='inline' id='mathml_775168392cdf3ef636d0d65b4a25349418e2a122_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is an exponentiable object in the 2-category of Grothendieck toposes and <a class='existingWikiWord' href='/nlab/show/geometric+morphism'>geometric morphisms</a> iff <math class='maruku-mathml' display='inline' id='mathml_775168392cdf3ef636d0d65b4a25349418e2a122_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/continuous+category'>continuous category</a>.</p>
+<p>A <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a> <math class='maruku-mathml' display='inline' id='mathml_23f2de45b20e580d4e2116675ca78d323f1ed4d9_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is an exponentiable object in the 2-category of Grothendieck toposes and <a class='existingWikiWord' href='/nlab/show/geometric+morphism'>geometric morphisms</a> iff <math class='maruku-mathml' display='inline' id='mathml_23f2de45b20e580d4e2116675ca78d323f1ed4d9_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/continuous+category'>continuous category</a>.</p>
 </div>
 
-<p>This result is due to Johnstone-Joyal (<a href='#JJ82'>19812</a>) and occurs as theorem 4.4.5 (p.748) of the <a class='existingWikiWord' href='/nlab/show/Elephant'>Elephant</a> (<a href='#J02'>Johnstone (2002)</a>.</p>
+<p>This result is due to Johnstone-Joyal (<a href='#JJ82'>1982</a>) and occurs as theorem 4.4.5 of the <a class='existingWikiWord' href='/nlab/show/Elephant'>Elephant</a> (<a href='#J02'>Johnstone (2002), p.748</a>).</p>
 
 <h2 id='examples'>Examples</h2>
 
 <ul>
-<li>Since <a class='existingWikiWord' href='/nlab/show/locally+finitely+presentable+category'>locally finitely presentable categories</a> are <a class='existingWikiWord' href='/nlab/show/continuous+category'>continuous</a> and <a class='existingWikiWord' href='/nlab/show/coherent+topos'>coherent toposes</a> are locally finitely presentable (cf. Johnstone (<a href='#J02'>2002, p.915</a>)) it follows that <em>coherent toposes are exponentiable</em>. This can be viewed as an avatar of the fact that locally compact topological spaces behave well with respect to mapping spaces.</li>
+<li>Since <a class='existingWikiWord' href='/nlab/show/locally+finitely+presentable+category'>locally finitely presentable categories</a> are <a class='existingWikiWord' href='/nlab/show/continuous+category'>continuous</a> and <a class='existingWikiWord' href='/nlab/show/coherent+topos'>coherent toposes</a> are locally finitely presentable (cf. Johnstone (<a href='#J02'>2002, p.915</a>)) it follows that <em>coherent toposes are exponentiable</em>. This can be viewed as an avatar of the fact that (locally) compact topological spaces behave well with respect to mapping spaces.</li>
 </ul>
 
 <h2 id='related_entries'>Related entries</h2>
@@ -696,6 +1028,10 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/classifying+topos+for+the+theory+of+objects'>classifying topos for the theory of objects</a></p>
+</li>
+
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/convenient+category+of+topological+spaces'>convenient category of spaces</a></p>
 </li>
 </ul>
@@ -705,6 +1041,10 @@ margin-left: 0em;
 <ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Mathieu+Anel'>Mathieu Anel</a>, Damien Lejay, <em>Exponentiable Higher Toposes</em> , arXiv:1802.10425 (2018). (<a href='https://arxiv.org/abs/1802.10425'>abstract</a>)</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Andreas+Blass'>Andreas Blass</a>, <em>The interaction of category theory and set theory</em> , Cont. Math. <strong>30</strong> (1984) pp.5-29. (<a href='http://www.math.lsa.umich.edu/~ablass/interact.pdf'>draft</a>)</p>
 </li>
 
 <li id='JJ82'>
@@ -726,7 +1066,7 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March  1, 2018 07:58:39 
+  Revised on March  1, 2018 08:19:16 
   by <a class="existingWikiWord" href="/nlab/show/Thomas+Holder">Thomas Holder</a>
   (89.204.130.125)
 </div>
