--- a/pages/19046.html
+++ b/pages/19046.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -640,7 +640,7 @@ margin-left: 0em;
 </p>
 </div></div>
 
-<h4 id='topos_theory_2'><math class='maruku-mathml' display='inline' id='mathml_50d2a014361638f5ce9c3f694fa9eba4a5e6c518_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Topos Theory</h4>
+<h4 id='topos_theory_2'><math class='maruku-mathml' display='inline' id='mathml_6528fff30cfc032f49efdc3e547169260b468eac_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Topos Theory</h4>
 
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos+theory'>(∞,1)-topos theory</a></strong></p>
@@ -978,7 +978,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a></li><li><a href='#properties'>Properties</a></li><li><a href='#examples'>Examples</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>An <strong>exponentiable topos</strong> is a generalization of the notion of an exponentiable <a class='existingWikiWord' href='/nlab/show/locale'>locale</a> and can be viewed as a (topological) “space” <math class='maruku-mathml' display='inline' id='mathml_50d2a014361638f5ce9c3f694fa9eba4a5e6c518_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> that behaves well with respect to the construction of mapping spaces <math class='maruku-mathml' display='inline' id='mathml_50d2a014361638f5ce9c3f694fa9eba4a5e6c518_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>Y</mi> <mi>X</mi></msup></mrow><annotation encoding='application/x-tex'>Y^X</annotation></semantics></math>.</p>
+<p>An <strong>exponentiable topos</strong> is a generalization of the notion of an exponentiable <a class='existingWikiWord' href='/nlab/show/locale'>locale</a> and can be viewed as a (topological) “space” <math class='maruku-mathml' display='inline' id='mathml_6528fff30cfc032f49efdc3e547169260b468eac_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> that behaves well with respect to the construction of mapping spaces <math class='maruku-mathml' display='inline' id='mathml_6528fff30cfc032f49efdc3e547169260b468eac_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>Y</mi> <mi>X</mi></msup></mrow><annotation encoding='application/x-tex'>Y^X</annotation></semantics></math>.</p>
 
 <p>The concept generalizes to <a class='existingWikiWord' href='/nlab/show/higher+topos+theory'>higher topos theory</a>.</p>
 
@@ -993,15 +993,21 @@ margin-left: 0em;
 <div class='num_prop'>
 <h6 id='theorem'>Theorem</h6>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a> <math class='maruku-mathml' display='inline' id='mathml_50d2a014361638f5ce9c3f694fa9eba4a5e6c518_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is an exponentiable object in the 2-category of Grothendieck toposes and <a class='existingWikiWord' href='/nlab/show/geometric+morphism'>geometric morphisms</a> iff <math class='maruku-mathml' display='inline' id='mathml_50d2a014361638f5ce9c3f694fa9eba4a5e6c518_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/continuous+category'>continuous category</a>.</p>
+<p>A <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a> <math class='maruku-mathml' display='inline' id='mathml_6528fff30cfc032f49efdc3e547169260b468eac_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is an exponentiable object in the 2-category of Grothendieck toposes and <a class='existingWikiWord' href='/nlab/show/geometric+morphism'>geometric morphisms</a> iff <math class='maruku-mathml' display='inline' id='mathml_6528fff30cfc032f49efdc3e547169260b468eac_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/continuous+category'>continuous category</a>.</p>
 </div>
 
-<p>This result is due to Johnstone-Joyal (<a href='#JJ82'>1982</a>) and occurs as theorem 4.4.5 of the <a class='existingWikiWord' href='/nlab/show/Elephant'>Elephant</a> (<a href='#J02'>Johnstone (2002), p.748</a>).</p>
+<p>This result is due to Johnstone-Joyal (<a href='#JJ82'>1982</a>) and occurs as theorem 4.4.5 of (<a href='#J02'>Johnstone (2002), p.748</a>).</p>
 
 <h2 id='examples'>Examples</h2>
 
 <ul>
-<li>Since <a class='existingWikiWord' href='/nlab/show/locally+finitely+presentable+category'>locally finitely presentable categories</a> are <a class='existingWikiWord' href='/nlab/show/continuous+category'>continuous</a> and <a class='existingWikiWord' href='/nlab/show/coherent+topos'>coherent toposes</a> are locally finitely presentable (cf. Johnstone (<a href='#J02'>2002, p.915</a>)) it follows that <em>coherent toposes are exponentiable</em>. This can be viewed as an avatar of the fact that (locally) compact topological spaces behave well with respect to mapping spaces.</li>
+<li>
+<p>Since <a class='existingWikiWord' href='/nlab/show/locally+finitely+presentable+category'>locally finitely presentable categories</a> are <a class='existingWikiWord' href='/nlab/show/continuous+category'>continuous</a> and <a class='existingWikiWord' href='/nlab/show/coherent+topos'>coherent toposes</a> are locally finitely presentable (cf. Johnstone (<a href='#J02'>2002, p.915</a>)) it follows that <em>coherent toposes are exponentiable</em>. This can be viewed as an avatar of the fact that (locally) compact topological spaces behave well with respect to mapping spaces.</p>
+</li>
+
+<li>
+<p>By the same reasoning all functor categories <math class='maruku-mathml' display='inline' id='mathml_6528fff30cfc032f49efdc3e547169260b468eac_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>Set</mi> <mi>𝒞</mi></msup></mrow><annotation encoding='application/x-tex'>Set^{\mathcal{C}}</annotation></semantics></math> for <math class='maruku-mathml' display='inline' id='mathml_6528fff30cfc032f49efdc3e547169260b468eac_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/small+category'>small category</a> are exponentiable since they are <a class='existingWikiWord' href='/nlab/show/locally+finitely+presentable+category'>locally finitely presentable</a>. This includes in particular all <a class='existingWikiWord' href='/nlab/show/category+of+presheaves'>presheaf toposes</a> on small categories.</p>
+</li>
 </ul>
 
 <h2 id='related_entries'>Related entries</h2>
@@ -1043,7 +1049,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/Mathieu+Anel'>Mathieu Anel</a>, Damien Lejay, <em>Exponentiable Higher Toposes</em> , arXiv:1802.10425 (2018). (<a href='https://arxiv.org/abs/1802.10425'>abstract</a>)</p>
 </li>
 
-<li>
+<li id='Blass84'>
 <p><a class='existingWikiWord' href='/nlab/show/Andreas+Blass'>Andreas Blass</a>, <em>The interaction of category theory and set theory</em> , Cont. Math. <strong>30</strong> (1984) pp.5-29. (<a href='http://www.math.lsa.umich.edu/~ablass/interact.pdf'>draft</a>)</p>
 </li>
 
@@ -1070,14 +1076,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March  1, 2018 10:22:51 
+  Revised on March  2, 2018 11:30:06 
   by <a class="existingWikiWord" href="/nlab/show/Thomas+Holder">Thomas Holder</a>
-  (89.204.130.98)
+  (89.204.135.39)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/exponentiable+topos" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/exponentiable+topos/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/exponentiable+topos" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/exponentiable+topos" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/exponentiable+topos" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/exponentiable+topos/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/exponentiable+topos" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/exponentiable+topos" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
